// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/checkbox/demo/basic.md correctly 1`] = `
<label
  class="infini-checkbox-wrapper"
>
  <span
    class="infini-checkbox"
  >
    <input
      class="infini-checkbox-input"
      type="checkbox"
    />
    <span
      class="infini-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`renders ./components/checkbox/demo/check-all.md correctly 1`] = `
<div>
  <div
    style="border-bottom:1px solid #E9E9E9"
  >
    <label
      class="infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox infini-checkbox-indeterminate"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Check all
      </span>
    </label>
  </div>
  <br />
  <div
    class="infini-checkbox-group"
  >
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-checked"
    >
      <span
        class="infini-checkbox infini-checkbox-checked"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-checked"
    >
      <span
        class="infini-checkbox infini-checkbox-checked"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/controller.md correctly 1`] = `
<div>
  <p
    style="margin-bottom:20px"
  >
    <label
      class="infini-checkbox-wrapper infini-checkbox-wrapper-checked"
    >
      <span
        class="infini-checkbox infini-checkbox-checked"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          type="checkbox"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Checked-Enabled
      </span>
    </label>
  </p>
  <p>
    <button
      class="infini-btn infini-btn-primary infini-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="infini-btn infini-btn-primary infini-btn-sm"
      style="margin-left:10px"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>
</div>
`;

exports[`renders ./components/checkbox/demo/disabled.md correctly 1`] = `
<div>
  <label
    class="infini-checkbox-wrapper infini-checkbox-wrapper-disabled"
  >
    <span
      class="infini-checkbox infini-checkbox-disabled"
    >
      <input
        class="infini-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="infini-checkbox-inner"
      />
    </span>
  </label>
  <br />
  <label
    class="infini-checkbox-wrapper infini-checkbox-wrapper-disabled"
  >
    <span
      class="infini-checkbox infini-checkbox-checked infini-checkbox-disabled"
    >
      <input
        checked=""
        class="infini-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="infini-checkbox-inner"
      />
    </span>
  </label>
</div>
`;

exports[`renders ./components/checkbox/demo/group.md correctly 1`] = `
<div>
  <div
    class="infini-checkbox-group"
  >
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-checked"
    >
      <span
        class="infini-checkbox infini-checkbox-checked"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="infini-checkbox-group"
  >
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-checked"
    >
      <span
        class="infini-checkbox infini-checkbox-checked"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper"
    >
      <span
        class="infini-checkbox"
      >
        <input
          class="infini-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="infini-checkbox-group"
  >
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-checked infini-checkbox-wrapper-disabled"
    >
      <span
        class="infini-checkbox infini-checkbox-checked infini-checkbox-disabled"
      >
        <input
          checked=""
          class="infini-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-disabled"
    >
      <span
        class="infini-checkbox infini-checkbox-disabled"
      >
        <input
          class="infini-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="infini-checkbox-group-item infini-checkbox-wrapper infini-checkbox-wrapper-disabled"
    >
      <span
        class="infini-checkbox infini-checkbox-disabled"
      >
        <input
          class="infini-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="infini-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/layout.md correctly 1`] = `
<div
  class="infini-checkbox-group"
  style="width:100%"
>
  <div
    class="infini-row"
  >
    <div
      class="infini-col infini-col-8"
    >
      <label
        class="infini-checkbox-wrapper"
      >
        <span
          class="infini-checkbox"
        >
          <input
            class="infini-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="infini-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </label>
    </div>
    <div
      class="infini-col infini-col-8"
    >
      <label
        class="infini-checkbox-wrapper"
      >
        <span
          class="infini-checkbox"
        >
          <input
            class="infini-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="infini-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </label>
    </div>
    <div
      class="infini-col infini-col-8"
    >
      <label
        class="infini-checkbox-wrapper"
      >
        <span
          class="infini-checkbox"
        >
          <input
            class="infini-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="infini-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </label>
    </div>
    <div
      class="infini-col infini-col-8"
    >
      <label
        class="infini-checkbox-wrapper"
      >
        <span
          class="infini-checkbox"
        >
          <input
            class="infini-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="infini-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </label>
    </div>
    <div
      class="infini-col infini-col-8"
    >
      <label
        class="infini-checkbox-wrapper"
      >
        <span
          class="infini-checkbox"
        >
          <input
            class="infini-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="infini-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </label>
    </div>
  </div>
</div>
`;
